force-app/main/default/objects/e_Customer_API__c/e_Customer_API__c.object-meta.xml
<CustomObject>
    <label>e Customer</label>
    <nameField>
        <label>e Customer  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>