force-app/main/default/objects/e_Customer_API__c/fields/Address_API__c.field-meta.xml
<CustomField>
    <fullName>Address_API__c</fullName>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>