force-app/main/default/objects/e_Customer_API__c/fields/And1_API__c.field-meta.xml
<CustomField>
    <fullName>And1_API__c</fullName>
    <label>And1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>