force-app/main/default/objects/e_Customer_API__c/fields/And2_API__c.field-meta.xml
<CustomField>
    <fullName>And2_API__c</fullName>
    <label>And2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>