force-app/main/default/objects/e_Customer_API__c/fields/Email_API__c.field-meta.xml
<CustomField>
    <fullName>Email_API__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>