force-app/main/default/objects/e_Customer_API__c/fields/Or1_API__c.field-meta.xml
<CustomField>
    <fullName>Or1_API__c</fullName>
    <label>Or1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>