force-app/main/default/objects/e_Customer_API__c/fields/Phone_API__c.field-meta.xml
<CustomField>
    <fullName>Phone_API__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>